# api/encryption.js
@@ -1,26 +1,0 @@
-// Dependencies
-
-var bcrypt = require('bcrypt');
-
-// Password encrypting
-exports.cryptPassword = function(password, callback) {
-  bcrypt.genSalt(10, function(err, salt) {
-    if (err) 
-      return callback(err);
-
-    bcrypt.hash(password, salt, function(err, hash) {
-      return callback(err, hash);
-    });
-
-  });
-};
-
-
-// Compare Encryted Password
-exports.comparePassword = function(password, userPassword, callback) {
-  bcrypt.compare(password, userPassword, function(err, isPasswordMatch) {
-    if (err) 
-      return callback(err);
-    return callback(null, isPasswordMatch);
-  });
-};
